# snappy-c

./: CMakeLists.txt  LICENSE  README.md  prova.txt
docs/: .snappy_file_format.txt.kate-swp  .swp  notes  snappy_file_format.txt
docs/Presentazione/: Link.txt  Link_alla_Presentazione.txt  Scaletta.txt  Slide_4_speed.odt  Slide_5_Formato.odt  Slide_6_Algoritmo_Compressione.odt  presentazione.pptx
docs/decompress/: Lettura_00literal_FlowChart.xml
src/: avl_tree.c  avl_tree.h  hashtable.c  hashtable.h  list.c  list.h  main.c  snappy.c  snappy_algo.c  snappy_algo.h  snappylib.c  snappylib.h  test.c  test_avl.c  test_bindata.c  test_hashmap.c  utilityfuncs.c  utilityfuncs.h
